--- a/goit/lesson_01/public/index.html
+++ b/goit/lesson_01/public/index.html
@@ -7,31 +7,28 @@
 </head>
 <body class="body">
     <div class="page">
-        <div class="page__item">
+        <div class="page__item page__item_one">
             <h1 class="h1">Дубовик Эдуард Анатольевич</h1>
             <img class="img-i" src="./img/i.jpg" alt="Edward Dubovic" title="Edward Dubovic">
-            <p>Студент заборостроительного университета</p>
+            <p class="p p_one">Студент заборостроительного университета</p>
         </div>
 
-        <div class="page__item">
-            <p>Хочу учить фронтенд, потому что:</p>
-            <div>
-                <ul class="list">
-                    <li class="list__item">Заборы строить не интересно</li>
-                    <li class="list__item">Платят мало</li>
-                    <li class="list__item">Приходится работать по ночам</li>
-                </ul>
-            </div>
+        <div class="page__item page__item_two">
+            <p class="p p_two">Хочу учить фронтенд, потому что:</p>
+            <ul class="list">
+                <li class="list__item">Заборы строить не интересно</li>
+                <li class="list__item">Платят мало</li>
+                <li class="list__item">Приходится работать по ночам</li>
+            </ul>
         </div>
 
-        <div class="page__item">
-            <p>Мой контактный телефон<br>+380971206306</p>
-            <p>Мой профиль вконтакте<br><a href="http://vk.com/edward.dubovic" title="Edward Dubovic in VK">vk.com</a></p>
+        <div class="page__item page__item_three">
+            <p class="p p_three">Мой контактный телефон<br>+380971206306</p>
+            <br><br>
+            <p class="p">Мой профиль вконтакте<br><a href="http://vk.com/edward.dubovic" title="Edward Dubovic in VK">vk.com</a></p>
         </div>
 
-        <div>
-            <p>Мой фидбек:<br>Если нужно, могу построить вам забор</p>
-        </div>
+        <p class="p">Мой фидбек:<br>Если нужно, могу построить вам забор</p>
     </div>
 </body>
 </html>
