--- a/goit/lesson_03/home_work_bnus/public/index.html
+++ b/goit/lesson_03/home_work_bnus/public/index.html
@@ -23,7 +23,7 @@
             </div>
         </header>
         <div class="content">
-            <div class="gallery">
+            <div class="gallery clearfix">
                 <div class="gallery__item">
                     <div class="gallery__border">
                         <img src="./img/countries/india.jpg" alt="India" class="gallery__img">
