--- a/goit/lesson_03/home_work/public/index.html
+++ b/goit/lesson_03/home_work/public/index.html
@@ -17,7 +17,7 @@
         <a class="menu__item" href="#" title="Контакты">Контакты</a>
       </nav>
     </header>
-    <div class="content">
+    <div class="content clearfix">
       <div class="left-content">
         <div class="left-menu">
           <nav class="left-menu">
@@ -43,7 +43,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer">
+    <footer class="footer clearfix">
       <div class="left-footer">
           <nav class="menu menu_footer">
             <a class="menu__item" href="#" title="Главная">Главная</a>
