--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <title>Edward Dubovic</title>
 </head>
 <body>
+    <p>Lessons:</p>
     <ul>
         <li><a href="http://edubovic.github.io/goit/lesson_01/public/index.html">Lesson 1</a></li>
         <li><a href="http://edubovic.github.io/goit/lesson_03/home_work/public/index.html">Lesson 3</a></li>
         <li><a href="http://edubovic.github.io/goit/lesson_03/home_work_bnus/public/index.html">Lesson 3 (Bonus)</a></li>
         <li><a href="http://edubovic.github.io/goit/lesson_04/public/index.html">Lesson 4</a></li>
-        <li></li>
+        <li><a href="http://edubovic.github.io/goit/lesson_05/public/cadastre.html">Lesson 5 (Cadastre)</a></li>
+        <li><a href="http://edubovic.github.io/goit/lesson_05/public/mondrian.html">Lesson 5 (Картина Пита Мондриана)</a></li>
+
     </ul>
 </body>
 </html>
