--- a/goit/lesson_01/public/index.html
+++ b/goit/lesson_01/public/index.html
@@ -23,12 +23,12 @@
         </div>
 
         <div class="page__item page__item_three">
-            <p class="p p_three">Мой контактный телефон<br>+380971206306</p>
-            <br><br>
-            <p class="p">Мой профиль вконтакте<br><a href="http://vk.com/edward.dubovic" title="Edward Dubovic in VK">vk.com</a></p>
+            <p class="p p_three"><span class="d-block">Мой контактный телефон</span>+380971206306</p>
+
+            <p class="p"><span class="d-block">Мой профиль вконтакте</span><a href="http://vk.com/edward.dubovic" title="Edward Dubovic in VK">vk.com</a></p>
         </div>
 
-        <p class="p">Мой фидбек:<br>Если нужно, могу построить вам забор</p>
+        <p class="p"><span class="d-block">Мой фидбек:</span>Если нужно, могу построить вам забор</p>
     </div>
 </body>
 </html>
