--- a/goit/lesson_03/home_work/public/index.html
+++ b/goit/lesson_03/home_work/public/index.html
@@ -11,24 +11,46 @@
     <header class="header">
       <a class="logo" href="/" title="Lesson 3"><img class="logo__img" src="./img/logo.jpg" alt="Logo"></a>
       <nav class="menu">
-        <a class="menu__item" href="#" title="Главная">Главная</a>
-        <a class="menu__item" href="#" title="Товары">Товары</a>
-        <a class="menu__item" href="#" title="О нас">О нас</a>
-        <a class="menu__item" href="#" title="Контакты">Контакты</a>
+          <ul class="menu__ul clearfix">
+              <li class="menu__li">
+                  <a class="menu__a" href="#" title="Главная">Главная</a>
+              </li>
+              <li class="menu__li">
+                  <a class="menu__a" href="#" title="Товары">Товары</a>
+              </li>
+              <li class="menu__li">
+                  <a class="menu__a" href="#" title="О нас">О нас</a>
+              </li>
+              <li class="menu__li">
+                  <a class="menu__a" href="#" title="Контакты">Контакты</a>
+              </li>
+          </ul>
       </nav>
     </header>
     <div class="content clearfix">
       <div class="left-content">
-        <div class="left-menu">
           <nav class="left-menu">
-            <a class="left-menu__a" href="#">Ноутбуки</a>
-            <a class="left-menu__a" href="#">Планшеты</a>
-            <a class="left-menu__a" href="#">Телефоны</a>
-            <a class="left-menu__a" href="#">Телевизоры</a>
-            <a class="left-menu__a" href="#">Бытовая техника</a>
-            <a class="left-menu__a" href="#">Автотовары</a>
+              <ul class="menu__ul menu__ul_left">
+                  <li class="menu__li">
+                      <a class="left-menu__a" href="#">Ноутбуки</a>
+                  </li>
+                  <li class="menu__li">
+                      <a class="left-menu__a" href="#">Планшеты</a>
+                  </li>
+                  <li class="menu__li">
+                      <a class="left-menu__a" href="#">Телефоны</a>
+                  </li>
+                  <li class="menu__li">
+                      <a class="left-menu__a" href="#">Телевизоры</a>
+                  </li>
+                  <li class="menu__li">
+                      <a class="left-menu__a" href="#">Бытовая техника</a>
+                  </li>
+                  <li class="menu__li">
+                      <a class="left-menu__a" href="#">Автотовары</a>
+                  </li>
+              </ul>
           </nav>
-        </div>
       </div>
       <div class="right-content">
         <div class="product">
@@ -36,9 +58,7 @@
             <img class="product-img" src="./img/bike.jpg" alt="">
           </div>
           <div class="product__desc">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
       </div>
@@ -46,10 +66,20 @@
     <footer class="footer clearfix">
       <div class="left-footer">
           <nav class="menu menu_footer">
-            <a class="menu__item" href="#" title="Главная">Главная</a>
-            <a class="menu__item" href="#" title="Товары">Товары</a>
-            <a class="menu__item" href="#" title="О нас">О нас</a>
-            <a class="menu__item" href="#" title="Контакты">Контакты</a>
+              <ul class="menu__ul clearfix">
+                  <li  class="menu__li">
+                      <a class="menu__a" href="#" title="Главная">Главная</a>
+                  </li>
+                  <li  class="menu__li">
+                      <a class="menu__a" href="#" title="Товары">Товары</a>
+                  </li>
+                  <li  class="menu__li">
+                      <a class="menu__a" href="#" title="О нас">О нас</a>
+                  </li>
+                  <li  class="menu__li">
+                      <a class="menu__a" href="#" title="Контакты">Контакты</a>
+                  </li>
+              </ul>
           </nav>
       </div>
       <div class="right-footer">2014 &copy; All rights reserved</div>
