--- a/goit/lesson_03/home_work_bnus/public/index.html
+++ b/goit/lesson_03/home_work_bnus/public/index.html
@@ -10,15 +10,12 @@
     <div class="box">
         <header class="header">
             <div class="logo">
-                <a class="logo__a" href="#" title="Lesson 3 - Bonus">
-                    Путешествия по Азии
-                </a>
+                <a class="logo__a" href="#" title="Lesson 3 - Bonus">Путешествия по Азии</a>
             </div>
             <div class="contact">
                 <div class="contact__title">Contact Us</div>
                 <div class="contact__des">
-                    +12 34 567 8910 <br>
-                    info@asia-holidays.com
+                    <span class="d-block">+12 34 567 8910</span> info@asia-holidays.com
                 </div>
             </div>
         </header>
