--- a/goit/lesson_05/public/cadastre.html
+++ b/goit/lesson_05/public/cadastre.html
@@ -8,22 +8,37 @@
 </head>
 <body class="body">
     <div class="box">
-
-
         <header class="header bg">
-            <ul class="menu">
-                <li class="menu__item"><a class="menu__a" href="#" title="Meu YouBike">Meu YouBike</a></li>
-                <li class="menu__item"><a class="menu__a" href="#" title="Vender">Vender</a></li>
-                <li class="menu__item"><a class="menu__a" href="#" title="Forum">Forum</a></li>
-                <li class="menu__item"><a class="menu__a" href="#" title="Contato">Contato</a></li>
-                <li class="menu__item"><a class="menu__a" href="#" title="Ajuda">Ajuda</a></li>
-            </ul>
+            <div class="center clearfix">
+                <div class="border-menu-right">
+                    <ul class="menu-right ul clearfix">
+                        <li class="menu-right__li">
+                            <a class="menu-right__a" href="#"><span class="menu__flag">Minhas Ofertas</span></a>
+                        </li>
+                        <li class="menu-right__li">
+                            <a class="menu-right__a" href="#">Ola! <span class="underline">Entrar</span> ou <span class="underline">Cadastre-se</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <ul class="menu ul clearfix">
+                    <li class="menu__li"><a class="menu__a" href="#" title="Meu YouBike">Meu YouBike</a></li>
+                    <li class="menu__li"><a class="menu__a" href="#" title="Vender">Vender</a></li>
+                    <li class="menu__li"><a class="menu__a" href="#" title="Forum">Forum</a></li>
+                    <li class="menu__li"><a class="menu__a" href="#" title="Contato">Contato</a></li>
+                    <li class="menu__li"><a class="menu__a" href="#" title="Ajuda">Ajuda</a></li>
+                </ul>
+
+            </div>
 
         </header>
 
         <div class="content">
             <div class="bg-opacity"><h1 class="h1">Cadastre-se</h1></div>
             <div class="bg-opacity">
+                <div class="fb">
+                    <a href="#" class="fb_a"></a>
+                </div>
+                <div class="ou">OU</div>
                 <form class="form" action="#" method="post">
                     <input class="form__input" type="text" name="first_name" value="" placeholder="First Name">
                     <input class="form__input" type="text" name="last_name" value="" placeholder="Last Name">
