--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="http://edubovic.github.io/goit/lesson_04/public/index.html">Lesson 4</a></li>
         <li><a href="http://edubovic.github.io/goit/lesson_05/public/cadastre.html">Lesson 5 (Cadastre)</a></li>
         <li><a href="http://edubovic.github.io/goit/lesson_05/public/mondrian.html">Lesson 5 (Картина Пита Мондриана)</a></li>
+        <li><a href="http://edubovic.github.io/goit/lesson_06/public/index.html">Lesson 5 (Картина Пита Мондриана)</a></li>
 
     </ul>
 </body>
