--- a/goit/lesson_04/public/index.html
+++ b/goit/lesson_04/public/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="body">
-    <div class="box">
-
+    <div class="box center">
         <header class="header">
             <div class="clearfix">
                 <div class="logo">
@@ -31,57 +30,12 @@
             <div class="photo">
                 <img src="./img/photo.jpg" alt="photo">
             </div>
-            <ul class="menu">
-                <li class="menu__li">
-                    <a class="menu__a" href="#" title="Главная">Главная</a>
-                </li>
-                <li class="menu__li">
-                    <a class="menu__a" href="#" title="Путешествие">Путешествие &#9662</a>
-                    <ul class="sub-menu">
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Путешествие1">Путешествие1</a></li>
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Путешествие2">Путешествие2</a></li>
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Путешествие3">Путешествие3</a></li>
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Путешествие4">Путешествие4</a></li>
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Путешествие5">Путешествие5</a></li>
-                    </ul>
-                </li>
-                <li class="menu__li">
-                    <a class="menu__a" href="#" title="Услуги">Услуги &#9662</a>
-                    <ul class="sub-menu">
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Услуги1">Услуги1</a></li>
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Услуги2">Услуги2</a></li>
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Услуги3">Услуги3</a></li>
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Услуги4">Услуги4</a></li>
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Услуги5">Услуги5</a></li>
-                    </ul>
-                </li>
-                <li class="menu__li">
-                    <a class="menu__a" href="#" title="Партнерам">Партнерам &#9662</a>
-                    <ul class="sub-menu">
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Партнерам1">Партнерам1</a></li>
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Партнерам2">Партнерам2</a></li>
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Партнерам3">Партнерам3</a></li>
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Партнерам4">Партнерам4</a></li>
-                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Партнерам5">Партнерам5</a></li>
-                    </ul>
-                </li>
-                <li class="menu__li">
-                    <a class="menu__a" href="#" title="Отзывы клиентов">Отзывы клиентов</a>
-                </li>
-                <li class="menu__li">
-                    <a class="menu__a" href="#" title="О нас">О нас</a>
-                </li>
-                <li class="menu__li">
-                    <a class="menu__a" href="#" title="Контакты">Контакты</a>
-                </li>
-            </ul>
-
         </header>
         <div class="content clearfix">
             <div class="content__left">
                 <div class="content__title">Информация</div>
                 <div class="content__text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
             </div>
 
@@ -95,7 +49,10 @@
 
             <div class="content__center">
                 <div class="content__textarea">
-
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
             </div>
         </div>
