--- a/goit/lesson_06/public/index.html
+++ b/goit/lesson_06/public/index.html
@@ -234,5 +234,12 @@
         </footer>
     </div>
 
+
+    <a id=”link” href=””>google.com</a>
+    <style>
+      #link { color: blue; }
+      a:hover { color: red; }
+    </style>
+    
 </body>
 </html>
