--- a/goit/html/lesson_04/public/index.html
+++ b/goit/html/lesson_04/public/index.html
@@ -15,21 +15,68 @@
                 </div>
                 <div class="info">
                     <div class="contact">
-                        <b>Наши контакты:</b><br>+9-098-765-4321 <br>+9-0123-456-890 <br> info@asia-holidays.com
+                        <b>Наши контакты:</b>
+                        <span class="contact__item">+9-098-765-4321</span>
+                        <span class=""contact__item>+9-0123-456-890</span>
+                        <span class="contact__item">info@asia-holidays.com</span>
                     </div>
                     <div class="country">
-                        <a class="country__item" href="#"><img class="country__img" src="./img/countries/india.png" alt="Индия">Индия</a>
-                        <a class="country__item" href="#"><img class="country__img" src="./img/countries/nepal.png" alt="Непал">Непал</a>
-                        <a class="country__item" href="#"><img class="country__img" src="./img/countries/tibet.png" alt="Тибет" title="Тибет">Тибет</a>
-                        <a class="country__item" href="#"><img class="country__img" src="./img/countries/bhutan.png" alt="Бутан" title="Бутан">Бутан</a>
-                        <a class="country__item" href="#"><img class="country__img" src="./img/countries/sri_lanka.png" alt="Шри-Ланка" title="Шри-Ланка">Шри-Ланка</a>
-                        <a class="country__item" href="#"><img class="country__img" src="./img/countries/maldives.png" alt="Мальдивы" title="Мальдивы">Мальдивы</a>
+                        <a class="country__item" href="#"><img class="country__img" src="./img/countries/india.png" alt="Индия"><span>Индия</span></a>
+                        <a class="country__item" href="#"><img class="country__img" src="./img/countries/nepal.png" alt="Непал"><span>Непал</span></a>
+                        <a class="country__item" href="#"><img class="country__img" src="./img/countries/tibet.png" alt="Тибет" title="Тибет"><span>Тибет</span></a>
+                        <a class="country__item" href="#"><img class="country__img" src="./img/countries/bhutan.png" alt="Бутан" title="Бутан"><span>Бутан</span></a>
+                        <a class="country__item" href="#"><img class="country__img" src="./img/countries/sri_lanka.png" alt="Шри-Ланка" title="Шри-Ланка"><span>Шри-Ланка</span></a>
+                        <a class="country__item" href="#"><img class="country__img" src="./img/countries/maldives.png" alt="Мальдивы" title="Мальдивы"><span>Мальдивы</span></a>
                     </div>
                 </div>
             </div>
             <div class="photo">
                 <img src="./img/photo.jpg" alt="photo">
             </div>
+            <ul class="menu">
+                <li class="menu__li">
+                    <a class="menu__a" href="#" title="Главная">Главная</a>
+                </li>
+                <li class="menu__li">
+                    <a class="menu__a" href="#" title="Путешествие">Путешествие &#9662</a>
+                    <ul class="sub-menu">
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Путешествие1">Путешествие1</a></li>
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Путешествие2">Путешествие2</a></li>
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Путешествие3">Путешествие3</a></li>
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Путешествие4">Путешествие4</a></li>
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Путешествие5">Путешествие5</a></li>
+                    </ul>
+                </li>
+                <li class="menu__li">
+                    <a class="menu__a" href="#" title="Услуги">Услуги &#9662</a>
+                    <ul class="sub-menu">
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Услуги1">Услуги1</a></li>
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Услуги2">Услуги2</a></li>
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Услуги3">Услуги3</a></li>
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Услуги4">Услуги4</a></li>
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Услуги5">Услуги5</a></li>
+                    </ul>
+                </li>
+                <li class="menu__li">
+                    <a class="menu__a" href="#" title="Партнерам">Партнерам &#9662</a>
+                    <ul class="sub-menu">
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Партнерам1">Партнерам1</a></li>
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Партнерам2">Партнерам2</a></li>
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Партнерам3">Партнерам3</a></li>
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Партнерам4">Партнерам4</a></li>
+                        <li class="sub-menu__li"><a class="menu__a" href="#" title="Партнерам5">Партнерам5</a></li>
+                    </ul>
+                </li>
+                <li class="menu__li">
+                    <a class="menu__a" href="#" title="Отзывы клиентов">Отзывы клиентов</a>
+                </li>
+                <li class="menu__li">
+                    <a class="menu__a" href="#" title="О нас">О нас</a>
+                </li>
+                <li class="menu__li">
+                    <a class="menu__a" href="#" title="Контакты">Контакты</a>
+                </li>
+            </ul>
         </header>
         <div class="content clearfix">
             <div class="content__left">
