--- a/goit/html/lesson_05/public/cadastre.html
+++ b/goit/html/lesson_05/public/cadastre.html
@@ -13,10 +13,10 @@
                 <div class="border-menu-right">
                     <ul class="menu-right ul clearfix">
                         <li class="menu-right__li">
-                            <a class="menu-right__a" href="#"><span class="menu__flag">Minhas Ofertas</span></a>
+                            <span class="menu__flag">Minhas Ofertas</span>
                         </li>
-                        <li class="menu-right__li">
-                            <a class="menu-right__a" href="#">Ola! <span class="underline">Entrar</span> ou <span class="underline">Cadastre-se</span></a>
+                        <li class="menu-right__li menu-right__li-blue">
+                            Ola! <a class="menu-right__a" href="#">Entrar</a> ou <a class="menu-right__a" href="#">Cadastre-se</a>
                         </li>
                     </ul>
                 </div>
@@ -36,7 +36,7 @@
             <div class="bg-opacity"><h1 class="h1">Cadastre-se</h1></div>
             <div class="bg-opacity">
                 <div class="fb">
-                    <a href="#" class="fb_a"></a>
+                    <div class="fb-login">Log In <span class="fb-login__span">with</span> Facebook</div>
                 </div>
                 <div class="ou">OU</div>
                 <form class="form" action="#" method="post">
