--- a/goit/html/lesson_06/public/index.html
+++ b/goit/html/lesson_06/public/index.html
@@ -31,7 +31,9 @@
                     </div>
                 </form>
             </div>
-            <img class="header__img-zazor" src="img/zazor.png" alt="zazor">
+            <div>
+                <img class="header__img-zazor" src="img/zazor.png" alt="zazor">
+            </div>
 
         </header>
         <div class="panel-menu clearfix">
@@ -185,10 +187,10 @@
                         <p class="header-menu__title">Шины</p>
                         <nav class="header-menu__nav">
                             <ul class="header-menu__ul">
-                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 1</label></a></li>
-                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 2</label></a></li>
-                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 3</label></a></li>
-                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 4</label></a></li>
+                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 1</label></li>
+                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 2</label></li>
+                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 3</label></li>
+                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 4</label></li>
                             </ul>
                         </nav>
                     </header>
@@ -196,10 +198,10 @@
                         <p class="header-menu__title">Биски</p>
                         <nav class="header-menu__nav">
                             <ul class="header-menu__ul">
-                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 1</label></a></li>
-                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 2</label></a></li>
-                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 3</label></a></li>
-                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 4</label></a></li>
+                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 1</label></li>
+                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 2</label></li>
+                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 3</label></li>
+                                <li class="header-menu__li"> <label><input class="header-menu__checkbox" type="checkbox" name="name">Бренд 4</label></li>
                             </ul>
                         </nav>
                     </header>
@@ -222,8 +224,11 @@
             <nav class="menu-nav menu-nav__footer">
                 <ul class="menu menu_footer clearfix">
                     <li class="menu__li"><a class="menu__a" href="#" title="О компании">О компании</a></li>
+                    <li class="menu__li"><span class="menu__span">|</span></li>
                     <li class="menu__li"><a class="menu__a" href="#" title="Доставка">Доставка</a></li>
+                    <li class="menu__li"><span class="menu__span">|</span></li>
                     <li class="menu__li"><a class="menu__a" href="#" title="Статьи">Статьи</a></li>
+                    <li class="menu__li"><span class="menu__span">|</span></li>
                     <li class="menu__li"><a class="menu__a" href="#" title="Контакты">Контакты</a></li>
                 </ul>
             </nav>
