--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Edward Dubovic</title>
 </head>
 <body>
-    <p>Lessons:</p>
+    <h1>GoFrontend</h1>
+    <h2>HTML</h2>
     <ul>
         <li><a href="http://edubovic.github.io/goit/html/lesson_01/public/index.html">Lesson 1</a></li>
         <li><a href="http://edubovic.github.io/goit/html/lesson_03/home_work/public/index.html">Lesson 3</a></li>
@@ -14,7 +15,12 @@
         <li><a href="http://edubovic.github.io/goit/html/lesson_05/public/cadastre.html">Lesson 5 (Cadastre)</a></li>
         <li><a href="http://edubovic.github.io/goit/html/lesson_05/public/mondrian.html">Lesson 5 (Картина Пита Мондриана)</a></li>
         <li><a href="http://edubovic.github.io/goit/html/lesson_06/public/index.html">Lesson 6</a></li>
-        <li><a href="http://edubovic.github.io/goit/javascript/lesson_10-11/public/index.html">Lesson 10-11</a></li>
+    </ul>
+    <h2>JavaScript</h2>
+    <ul>
+        <li><a href="http://edubovic.github.io/goit/javascript/lesson_1-2/public/index.html">Lesson 1-2</a></li>
+        <li><a href="http://edubovic.github.io/goit/javascript/lesson_3-4/public/index.html">Lesson 3-4</a></li>
+        <li><a href="http://edubovic.github.io/goit/javascript/lesson_5-6/public/index.html">Lesson 5-6</a></li>
     </ul>
 </body>
 </html>
