carousel and select

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <li><a href="http://edubovic.github.io/goit/javascript/lesson_1-2/public/index.html">Lesson 1-2</a></li>
         <li><a href="http://edubovic.github.io/goit/javascript/lesson_3-4/public/index.html">Lesson 3-4</a></li>
         <li><a href="http://edubovic.github.io/goit/javascript/lesson_5-6/public/index.html">Lesson 5-6</a></li>
+        <li><a href="http://edubovic.github.io/goit/javascript/lesson_7-8/public/index.html">Lesson 7-8</a></li>
+        <li><a href="http://edubovic.github.io/goit/javascript/lesson_9-10/public/index.html">Lesson 9-10</a></li>
     </ul>
 </body>
 </html>
