--- a/goit/html/lesson_04/public/index.html
+++ b/goit/html/lesson_04/public/index.html
@@ -17,7 +17,7 @@
                     <div class="contact">
                         <b>Наши контакты:</b>
                         <span class="contact__item">+9-098-765-4321</span>
-                        <span class=""contact__item>+9-0123-456-890</span>
+                        <span class="contact__item">+9-0123-456-890</span>
                         <span class="contact__item">info@asia-holidays.com</span>
                     </div>
                     <div class="country">
